[gd_scene load_steps=3 format=3 uid="uid://btmhl4dpc260n"]

[ext_resource type="Script" path="res://Tabs/Customization/CustomizationPanel.gd" id="1_06wwo"]
[ext_resource type="Texture2D" uid="uid://f5amv6ot7myy" path="res://Tabs/Customization/NoImage.png" id="3"]

[node name="CustomizationPanel" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_06wwo")

[node name="Container" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="GroupName" type="Label" parent="Container"]
layout_mode = 2
theme_type_variation = &"Section"
text = "Group name"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GeneralInfo" type="Label" parent="Container"]
layout_mode = 2
text = "Multiline general info"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Image" type="VBoxContainer" parent="Container"]
layout_mode = 2
alignment = 1

[node name="ImageHeader" type="HBoxContainer" parent="Container/Image"]
layout_mode = 2

[node name="HSeparator" type="HSeparator" parent="Container/Image/ImageHeader"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ImageName" type="Label" parent="Container/Image/ImageHeader"]
auto_translate_mode = 2
layout_mode = 2
theme_type_variation = &"Subsection"
text = "Image name"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator2" type="HSeparator" parent="Container/Image/ImageHeader"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ImageInfo" type="Label" parent="Container/Image"]
layout_mode = 2
text = "Multiline image info"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Image" type="TextureRect" parent="Container/Image"]
layout_mode = 2
texture = ExtResource("3")
stretch_mode = 3

[node name="Template" type="HBoxContainer" parent="Container/Image"]
layout_mode = 2

[node name="HSeparator" type="Control" parent="Container/Image/Template"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TemplateButton" type="Button" parent="Container/Image/Template"]
layout_mode = 2
text = "Fetch template"

[node name="HSeparator2" type="Control" parent="Container/Image/Template"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Space" type="Control" parent="Container/Image"]
custom_minimum_size = Vector2(0, 16)
layout_mode = 2
